testsuite/c_test/enhancec_test/ENC0122-nonnull_check_insert_err/nonnull_check_insert_err.c
/*
 * Copyright (c) [2020-2022] Huawei Technologies Co.,Ltd.All rights reserved.
 *
 * OpenArkCompiler is licensed under Mulan PSL v2.
 * You can use this software according to the terms and conditions of the Mulan PSL v2.
 * You may obtain a copy of Mulan PSL v2 at:
 *
 *     http://license.coscl.org.cn/MulanPSL2
 *
 * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER
 * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR
 * FIT FOR A PARTICULAR PURPOSE.
 * See the Mulan PSL v2 for more details.
 */



#include <stdio.h>
#include <stdlib.h>

SAFE void func2(int *p __attribute__((nonnull)));
SAFE void func3() {
  int *q = (int*)malloc(sizeof(int));
  func2(q); // CHECK: [[# @LINE ]] error: nullable pointer passed to func2 that requires a nonnull pointer for 1st argument in safe region
}

int main() {
  func3();
  return 0;
}
